z-index fixes

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -1395,7 +1395,9 @@ input[type="submit"]:hover {
     padding-left: 0px !important;
     padding-right: 0px !important;
     overflow-y: scroll;
+    z-index: 99999;
 }
+.modal-backdrop{z-index: 9999;}
 .breadcrumb1 ul {
     margin: 0;
     padding: 10px 0;
